package.json license

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "noise"
   ],
   "author": "jackunion",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jackunion/tooloud/issues"
   },
